--- a/MicroRabbit/MicroRabbit.Tranfer.Domain/MicroRabbit.Tranfer.Domain.csproj
+++ b/MicroRabbit/MicroRabbit.Tranfer.Domain/MicroRabbit.Tranfer.Domain.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="CommandHandlers\" />
+    <Folder Include="Events\" />
+    <Folder Include="EventHandlers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
