Implemented Event handlers.

--- a/MicroRabbit/MicroRabbit.Tranfer.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Tranfer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Server=.;Database=TransferDB;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
