--- a/MicroRabbit/MicroRabbit.Tranfer.Domain/MicroRabbit.Transfer.Domain.csproj
+++ b/MicroRabbit/MicroRabbit.Tranfer.Domain/MicroRabbit.Transfer.Domain.csproj
@@ -7,10 +7,10 @@
   <ItemGroup>
     <Folder Include="Commands\" />
     <Folder Include="CommandHandlers\" />
-    <Folder Include="Events\" />
-    <Folder Include="EventHandlers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
